--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,11 +5,11 @@
   display: flex;
   height: $large-height;
   justify-content: center;
+  min-width: 100%;
   overflow: hidden;
   position: fixed;
   top: 0;
   transition: height 0.5s;
-  width: 100%;
 
   &--open {
     height: $large-height + ($base-height + 0.2em) * $menu-items;
@@ -18,14 +18,14 @@
 
 .navbar {
   display: flex;
-  flex: auto;
+  flex: 1;
   flex-direction: column;
   max-width: $max-width;
+  padding: 0 1em;
 
   @include sm {
     flex-direction: row;
     justify-content: space-between;
-    padding-right: 1em;
   }
 
   &__head {
@@ -33,7 +33,6 @@
     display: flex;
     justify-content: space-between;
     min-height: $large-height;
-    padding: 0 1em;
   }
 
   &__logo {
@@ -59,6 +58,7 @@
     @include sm {
       flex-direction: row;
       justify-content: flex-end;
+      padding: 0;
     }
   }
 
